syntax = "proto3";

package api.v1.project.settings;

import "api/v1/project/settings/settings.proto";

// Service for setting and retrieving project-wide settings.
service Service {
  // Gets the users settings for the current project.
  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse) {}
  // Sets the users settings for the current project.
  rpc UpdateSettings(UpdateSettingsRequest) returns (UpdateSettingsResponse) {}
}

// Empty get settings request
message GetSettingsRequest {}

// Response for getting settings for the project.
message GetSettingsResponse {
  // The settings.
  api.v1.project.settings.Settings settings = 1;
}

// Request for  updating settings for a project.
message UpdateSettingsRequest {
  // The updates to apply.
  repeated api.v1.project.settings.Update updates = 1;
}

// Empty response for updating a project's settings.
message UpdateSettingsResponse {}
