syntax = "proto3";

package api.v1.project.settings;

import "model/credentials.proto";

enum TemplateType {
  TEMPLATE_TYPE_UNSPECIFIED = 0;
  TEMPLATE_TYPE_WELCOME_EMAIL = 1;
  TEMPLATE_TYPE_EMAIL_VERIFICATION = 2;
  TEMPLATE_TYPE_EMAIL_RESET_PASSWORD = 3;
  TEMPLATE_TYPE_WELCOME_TEXT = 4;
  TEMPLATE_TYPE_TEXT_VERIFICATION = 5;
  TEMPLATE_TYPE_TEXT_RESET_PASSWORD = 6;
}

message DefaultInstance {}

message MailjetInstance {}

message TwilioInstance {}

message SmtpInstance {
  string host = 1;
  int64 port = 2;
}

message EmailInstance {
  oneof instance {
    DefaultInstance default = 1;
    MailjetInstance mailjet = 2;
    SmtpInstance smtp = 3;
  }
}

message TextInstance {
  oneof instance {
    DefaultInstance default = 1;
    TwilioInstance twilio = 2;
  }
}

message EmailProvider {
  string from = 1;
  model.ProviderCredentials credentials = 2;
  EmailInstance instance = 3;
}

message EmailProviderEntry {
  string from = 1;
  string client_id = 2;
  string secret_id = 3;
  EmailInstance instance = 4;
}

message TextProvider {
  string from = 1;
  model.ProviderCredentials credentials = 2;
  TextInstance instance = 3;
}

message TextProviderEntry {
  string from = 1;
  string client_id = 2;
  string secret_id = 3;
  TextInstance instance = 4;
}

message Template {
  string body = 1;
  string subject = 2;
  TemplateType type = 3;
  repeated string format = 4;
}

message Templates {
  Template welcome_email = 1;
  Template welcome_text = 2;
  Template reset_password_email = 3;
  Template reset_password_text = 4;
  Template verify_email = 5;
  Template verify_phone_number = 6;
}

message Settings {
  EmailProviderEntry email_provider = 1;
  TextProviderEntry text_provider = 2;
  Templates templates = 3;
  repeated DockerRegistry docker_registries = 4;
}

message DockerRegistry {
  string secret_id = 1;
  string host = 2;
}

message AddDockerRegistry {
  string host = 1;
  oneof field {
    string auth = 2;
    DockerRegistryCredentials credentials = 3;
  }
}

message DockerRegistryCredentials {
  string username = 1;
  string password = 2;
  string email = 3;
}

message Update {
  oneof field {
    EmailProvider email_provider = 1;
    TextProvider text_provider = 2;
    Template template = 3;
    AddDockerRegistry add_docker_registry = 4;
    string delete_docker_registry = 5;
  }
}
