syntax = "proto3";

package api.v1.user;

import "model/user.proto";
import "model/common.proto";
import "api/v1/user/user.proto";

// The service to manage users in Users.
service Service {
  // Create a new user.
  rpc Create(CreateRequest) returns (CreateResponse) {}
  // Update a users profile and info.
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  // Get the list of active sessions for the given user.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse) {}
  // Get a user by user-id.
  rpc Get(GetRequest) returns (GetResponse) {}
  // Lookup a user by a unique identifier - email, username, phone number etc.
  rpc GetByIdentifier(GetByIdentifierRequest)
      returns (GetByIdentifierResponse) {}
  // List users.
  rpc List(ListRequest) returns (ListResponse) {}
  // Delete a specific user.
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

// Request to get a user by an identifier.
message GetByIdentifierRequest {
  // The identifier to lookup.
  model.UserIdentifier identifier = 1;
}

// Response to get a user by an identifier.
message GetByIdentifierResponse {
  // The user.
  api.v1.user.User user = 1;
}

// The request to create a user.
message CreateRequest {
  // Initial fields to set.
  repeated api.v1.user.Update initializers = 1;
  // If set, the user will be added to this group upon creation.
  string initial_group_id = 2;
}

// The response of creating a user.
message CreateResponse {
  // The created user.
  api.v1.user.User user = 1;
}

// The request of updating a user.
message UpdateRequest {
  // The user identifier of the user to update.
  string user_id = 1;
  // The updates to apply to the user.
  repeated api.v1.user.Update updates = 2;
}

// Empty update response.
message UpdateResponse {}

// Get request for retrieving a user.
message GetRequest {
  // The user identifier to fetch the user.
  string user_id = 1;
}

// The response of getting a user.
message GetResponse {
  // The retrieved user.
  api.v1.user.User user = 1;
}

// Request to list a users login sessions.
message ListSessionsRequest {
  // The user to retrieve sessions for.
  string user_id = 1;
  // Pagination options.
  model.Pagination pagination = 2;
}

// The response of listing a users login sessions.
message ListSessionsResponse {
  // The retrieved sessions.
  repeated api.v1.user.SessionEntry sessions = 1;
  // The total number of sessions.
  uint64 total = 2;
}

// Request for deleting a user.
message DeleteRequest {
  // The user identifier to fetch the user.
  string user_id = 1;
}

// Empty response for deleting a user.
message DeleteResponse {}

// Request for listing users.
message ListRequest {
  // Pagination options.
  model.Pagination pagination = 1;
  // Search string.
  string search = 2;
}

// Response for listing users.
message ListResponse {
  // The users returned.
  repeated model.UserEntry users = 1;
  // total number of users.
  uint64 total = 2;
}
