syntax = "proto3";

package api.v1.user.settings;

import "google/protobuf/duration.proto";

import "model/common.proto";
import "model/auth.proto";

message Update {
  message LoginMechanisms {
    repeated model.LoginType login_mechanisms = 1;
  }

  oneof field {
    bool allow_register = 1;
    bool is_verified_email_required = 2;
    bool is_verified_phone_required = 3;
    google.protobuf.Duration access_token_ttl = 4;
    google.protobuf.Duration refresh_token_ttl = 5;
    google.protobuf.Duration verification_code_ttl = 6;
    model.HashingConfig password_hashing = 7;
    LoginMechanisms login_mechanisms = 8;
  }
}

message RegisterMethod {
  message System {}

  message Signup {
    model.LoginType login_type = 1;
  }

  oneof method {
    System system = 1;
    Signup signup = 2;
  }
}

message AuthMethod {
  oneof method {
    model.LoginType login_type = 1;
  }
}

message Settings {
  bool allow_register = 1;
  bool is_verified_email_required = 2;
  bool is_verified_phone_required = 3;
  google.protobuf.Duration access_token_ttl = 4;
  google.protobuf.Duration refresh_token_ttl = 5;
  google.protobuf.Duration verification_code_ttl = 6;
  model.HashingConfig password_hashing = 7;
  repeated model.LoginType login_mechanisms = 8;
  bool send_welcome_mail = 10;
}
